<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/UpperBarTitle"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/textViewPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomePlaceQuestion"
            android:textAllCaps="false"
            android:textColor="@color/textTitles"
            android:textSize="20sp"
            app:fontFamily="sans-serif"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InsertCap"
            android:textAllCaps="false"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            app:fontFamily="sans-serif" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >


        <EditText
            android:id="@+id/editTextCAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/CAP"
            android:importantForAutofill="no"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
    <Button
        android:id="@+id/buttonconferma"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/Confirm"
   />
    </LinearLayout>
</LinearLayout>