<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageWeather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/WeatherTypeGeneric"
            android:src="@mipmap/ic_weather" />

        <TextView
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/textViewWeatherType"
            android:layout_width="0dp"
            android:layout_weight="2"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textViewWeatherDangerLbl"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/Danger"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/textViewWeatherDanger"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textViewWDescLbl"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/Description"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
            <TextView
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="15sp"
                android:id="@+id/textViewWDesc"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textViewWeatherBegLbl"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/BeginTime"

                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
            <TextView
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:id="@+id/textViewWeatherBeg"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textViewWeatherEndLbl"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/EndTime"

                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
            <TextView
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:textSize="15sp"
                android:id="@+id/textViewWeatherEnd"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textViewWeatherSpeedLbl"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/WindSpeed"

                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
            <TextView
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_column="1"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:id="@+id/textViewWeatherSpeed"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>